--- a/frontEnd/aula03Img/01-segundaPag/pages/contato.html
+++ b/frontEnd/aula03Img/01-segundaPag/pages/contato.html
@@ -14,7 +14,7 @@
         <li><a href="https://github.com/Drizi-b">Github.Drizi-b</a> - Acesse meu repositório público no Github</li>
         <li><a href="https://www.linkedin.com/in/adriana-balon-5b016635a/">linkedin.adriana-balon</a> - Me add no Linkedin</li>
         <li><a href="https://www.instagram.com/adriana.drizi/">@adriana.drizi</a> - Este é meu Instagram</li>
-        <a href="/01-segundaPag/pages/sobreNos.html">Sobre Nós</a>
-        <a href="/index.html">Home</a>
+        <a href="./sobreNos.html">Sobre Nós</a>
+        <a href="../index.html">Home</a>
 </body>
 </html>
