--- a/frontEnd/aula03Img/01-segundaPag/pages/sobreNos.html
+++ b/frontEnd/aula03Img/01-segundaPag/pages/sobreNos.html
@@ -11,7 +11,7 @@
         <h1>Sobre Nós</h1>
         <p style="font-size: 14px;">Meu nome é <em><strong>Adriana Balon</strong></em>, sou estudante de programação FullStack, na escola PósRio e estou procurando novos horizontes. Meu marido e filho também estudam comigo.</p><br>
     <h2>Como falar comigo</h2>
-    <p>Clique <a href="/01-segundaPag/pages/contato.html"><strong><em>aqui</em></strong></a> para me contatar</p>
-    <a href="/index.html">Home</a>
+    <p>Clique <a href="./contato.html"><strong><em>aqui</em></strong></a> para me contatar</p>
+    <a href="../index.html">Home</a>
 </body>
 </html>
