--- a/frontEnd/aula03Img/01-segundaPag/index.html
+++ b/frontEnd/aula03Img/01-segundaPag/index.html
@@ -16,12 +16,13 @@
 </head>
 <body>
         <a href="https://www.melhoresdestinos.com.br/vesuvio.html" target="_blank"><img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="98%" height="150"></a>
+        <figcaption>Vulcão Vesúvio</figcaption>
         <img src="./assets/imagens/capri.jpg" alt="capri" width="32.3%" height="80">
         <img src="./assets/imagens/veneza.jpg" alt="veneza" width="32.3%" height="80">
         <img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="32.3%" height="80">
         
         <h1>Imagens e Favicons</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo dolorem ullam laboriosam dicta voluptate, <span style="color: #ff0000;">harum ex ipsum accusantium distinctio blanditiis</span> quis nam repellendus alias doloribus placeat aliquam rem molestias aliquid!</p><hr />
+        <p>Lorem ipsum dolor sit, <q>amet consectetur</q> adipisicing elit. Quo dolorem ullam laboriosam dicta voluptate, <span style="color: #ff0000;">harum ex ipsum accusantium distinctio blanditiis</span> quis nam repellendus alias doloribus placeat aliquam rem molestias aliquid!</p><hr />
 
     <ul>
             <li><a href="./pages/sobreNos.html">Sobre nós</a></li>
