--- a/frontEnd/aula04Tabela/tabela.html
+++ b/frontEnd/aula04Tabela/tabela.html
@@ -6,6 +6,52 @@
     <title>Tabelas</title>
 </head>
 <body>
-    
+    <center>
+        <table width="70%" border="5" style="background-color:rgb(17, 109, 126);">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Nacionalidade</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jose</td>
+                <td>75</td>
+                <td rowspan="4">Brasileiro</td>
+            </tr>
+            <tr>
+                <td>Adriana</td>
+                <td>49</td>
+                <!--<td>Brasileiro</td>-->
+            </tr>
+            <tr>
+                <td>Welinton</td>
+                <td>40</td>
+                <!--<td>Americano</td>-->
+            </tr>
+            <tr>
+                <td>Leonardo</td>
+                <td>15</td>
+                <!--<td>Italiano</td>-->
+            </tr>
+        </tbody>
+    <table width="70%" border="5" style="background-color:rgb(212, 91, 204);">
+        <thead>
+            <tr>
+                <th colspan="4">Especificações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img width="50" src="https://images.tcdn.com.br/img/img_prod/1040701/placa_de_video_geforce_rtx_4060_8gb_gigabyte_gv_n4060wf2oc_8gd_4745_1_6fc687d2f523c253c39d5d115f7b6216.png" alt="Placa de video rtx 4060"></td>
+                <td>Placa de Vídeo</td>
+                <td>RTX 4060</td>
+                <td>3 GB</td>
+            </tr>
+        </tbody>
+    </table>
+    </center>
 </body>
 </html>
