--- a/frontEnd/aula03Img/01-segundaPag/index.html
+++ b/frontEnd/aula03Img/01-segundaPag/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segundo Site</title>
     <link rel="shortcut icon" href="./assets/imagens/favicon.ico" type="image/x-icon">
-    <style>
+    <!--<style>
         body {
             text-align: center;
         }
         ul {
             text-align: left;
         }
-    </style>
+    </style>-->
 </head>
 <body>
+    <center>
         <a href="https://www.melhoresdestinos.com.br/vesuvio.html" target="_blank"><img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="98%" height="150"></a>
         <figcaption>Vulcão Vesúvio</figcaption>
         <img src="./assets/imagens/capri.jpg" alt="capri" width="32.3%" height="80">
@@ -28,6 +29,6 @@
             <li><a href="./pages/sobreNos.html">Sobre nós</a></li>
             <li><a href="./pages/contato.html">Contato</a></li>
     </ul>
-
+    </center>
 </body>
 </html>
