--- a/frontEnd/aula03Img/01-segundaPag/index.html
+++ b/frontEnd/aula03Img/01-segundaPag/index.html
@@ -5,30 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segundo Site</title>
     <link rel="shortcut icon" href="./assets/imagens/favicon.ico" type="image/x-icon">
-    <!--<style>
-        body {
-            text-align: center;
-        }
-        ul {
-            text-align: left;
-        }
-    </style>-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center>
-        <a href="https://www.melhoresdestinos.com.br/vesuvio.html" target="_blank"><img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="98%" height="150"></a>
+    <figure>
+    <nav><a href="https://www.melhoresdestinos.com.br/vesuvio.html" target="_blank"><img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="98%" height="400"></a></nav>
         <figcaption>Vulcão Vesúvio</figcaption>
-        <img src="./assets/imagens/capri.jpg" alt="capri" width="32.3%" height="80">
-        <img src="./assets/imagens/veneza.jpg" alt="veneza" width="32.3%" height="80">
-        <img src="./assets/imagens/vesuvio.jpg" alt="vesuvio" width="32.3%" height="80">
-        
+        <img src="./assets/imagens/capri.jpg" alt="capri" title="Capri" width="32.3%" height="300">
+        <img src="./assets/imagens/veneza.jpg" alt="veneza" title="Veneza" width="32.3%" height="300">
+        <img src="./assets/imagens/verona.jpg" alt="vesuvio" title="Verona" width="32.3%" height="300">
+    </figure>
+<header>    
         <h1>Imagens e Favicons</h1>
-        <p>Lorem ipsum dolor sit, <q>amet consectetur</q> adipisicing elit. Quo dolorem ullam laboriosam dicta voluptate, <span style="color: #ff0000;">harum ex ipsum accusantium distinctio blanditiis</span> quis nam repellendus alias doloribus placeat aliquam rem molestias aliquid!</p><hr />
+</header>
+        <main>
+            <p>Lorem ipsum dolor sit, <q>amet consectetur</q> adipisicing elit. Quo dolorem ullam laboriosam dicta voluptate, harum ex <strong>ipsum accusantium distinctio blanditiis</strong> quis nam repellendus alias doloribus placeat aliquam rem molestias aliquid!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis exercitationem corrupti necessitatibus tempora corporis illo officia velit tempore repudiandae, ad quae fuga soluta ipsum explicabo autem distinctio a et magni?</p>
+            <hr/>
+        </main>
 
-    <ul>
-            <li><a href="./pages/sobreNos.html">Sobre nós</a></li>
-            <li><a href="./pages/contato.html">Contato</a></li>
-    </ul>
-    </center>
+    <footer>
+        <nav>
+            <ul>
+                    <li><a href="./pages/sobreNos.html">Sobre nós</a></li>
+                    <li><a href="./pages/contato.html">Contato</a></li>
+            </ul>
+        </nav>
+        <p>&copy; Copyright 2025 | Todos os direitos reservados - Dri Balon</p>
+    </footer>
 </body>
 </html>
