--- a/frontEnd/aula03Img/01-segundaPag/pages/contato.html
+++ b/frontEnd/aula03Img/01-segundaPag/pages/contato.html
@@ -5,16 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="shortcut icon" href="../assets/imagens/tel.ico" type="image/x-icon">
+    <style>
+        h1 {
+            font: italic bolder 3em "Epunda-Slab", serif;
+            text-decoration: underline;
+        }
+        li, a {
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
     
+    <header>
         <h1>Contato</h1>
-
-        <ul type = circle>
-        <li><a href="https://github.com/Drizi-b">Github.Drizi-b</a> - Acesse meu repositório público no Github</li>
-        <li><a href="https://www.linkedin.com/in/adriana-balon-5b016635a/">linkedin.adriana-balon</a> - Me add no Linkedin</li>
-        <li><a href="https://www.instagram.com/adriana.drizi/">@adriana.drizi</a> - Este é meu Instagram</li>
-        <a href="./sobreNos.html">Sobre Nós</a>
-        <a href="../index.html">Home</a>
+    </header>
+    <main>
+        <nav>
+                <ul type = circle>
+                <li><a href="https://github.com/Drizi-b">Github.Drizi-b</a> - Acesse meu repositório público no Github</li>
+                <li><a href="https://www.linkedin.com/in/adriana-balon-5b016635a/">linkedin.adriana-balon</a> - Me add no Linkedin</li>
+                <li><a href="https://www.instagram.com/adriana.drizi/">@adriana.drizi</a> - Este é meu Instagram</li> <hr>
+                <p>
+                    <a href="./sobreNos.html">Sobre Nós</a><br>
+                    <a href="../index.html">Home</a>
+                </p>
+        </nav>
+    </main>
+<footer>
+    <p>&copy; Copyright 2025 | Todos os direitos reservados - Dri Balon</p>
+</footer>
 </body>
 </html>
