--- a/frontEnd/CSS/aula08Grid/index.html
+++ b/frontEnd/CSS/aula08Grid/index.html
@@ -18,9 +18,9 @@
         <aside id="aside">
             <h2>Conteúdo Lateral</h2>
             <ul>
-                <li><link rel="stylesheet" href="1">Item 1</link></li>
-                <li><link rel="stylesheet" href="2">Item 2</link></li>
-                <li><link rel="stylesheet" href="3">Item 3</link></li>
+                <a href=""><li>Item 1</li></a>
+                <a href=""><li>Item 2</li></a>
+                <a href=""><li>Item 3</li></a>
             </ul>
         </aside>
         <footer id="footer">
