--- a/frontEnd/CSS/aula09CidadeMundo/complemento.html
+++ b/frontEnd/CSS/aula09CidadeMundo/complemento.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sydney</title>
   <!-- Altera icone da aba -->
-  <link rel="shortcut icon" href="assets/img/australia/logo-cidades.png" />
+  <link rel="shortcut icon" href="assets/img/australia/logo-cidades.png"/>
   <!-- importa fonte do google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -39,7 +39,7 @@
 
     <div class="modulo mapa">
       <h2 class="subtitulo">Mapa da cidade</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
     </div>
 
     <div class="modulo notaveis">
@@ -47,9 +47,9 @@
         Principais celebridades e notáveis da cidade
       </h2>
       <ol>
-        <li>Hugh Jackman</li>
-        <li>Russel Crowe</li>
-        <li>Nicole Kidman</li>
+        <li><a href="https://pt.wikipedia.org/wiki/Hugh_Jackman">Hugh Jackman</a></li>
+        <li><a href="https://pt.wikipedia.org/wiki/Russell_Crowe">Russel Crowe</a></li>
+        <li><a href="https://pt.wikipedia.org/wiki/Chris_Hemsworth">Chris Hemsworth</a></li>
       </ol>
     </div>
   </main>
