--- a/frontEnd/CSS/aula09CidadeMundo/index.html
+++ b/frontEnd/CSS/aula09CidadeMundo/index.html
@@ -95,10 +95,10 @@
     <div class="modulo lista-locais">
       <h2 class="subtitulo">Lista de locais de interesse</h2>
       <ul>
-        <li>Opera House</li>
-        <li>Ponte da Baia de Sydney</li>
-        <li>Porto de Darling</li>
-        <li>Jardim Botânico Real</li>
+        <li><a href="https://guia.melhoresdestinos.com.br/opera-de-sydney-sydney-opera-house-176-4484-l.html"  target="_blank">Opera House</a></li>
+        <li><a href="https://guia.melhoresdestinos.com.br/ponte-da-baia-de-sydney-sydney-harbour-bridge-176-4487-l.html" target="_blank">Ponte da Baia de Sydney</a></li>
+        <li><a href="https://guia.melhoresdestinos.com.br/darling-harbour-176-4491-l.html" target="_blank">Porto de Darling</a></li>
+        <li><a href="https://guia.melhoresdestinos.com.br/royal-botanic-garden-176-4486-l.html" target="_blank">Jardim Botânico Real</a></li>
       </ul>
     </div>
   </main>
