--- a/frontEnd/CSS/aula09CidadeMundo/complemento.html
+++ b/frontEnd/CSS/aula09CidadeMundo/complemento.html
@@ -34,12 +34,12 @@
 
   <main class="principal">
     <div class="container-titulo">
-      <h1>Complemento - Sydney</h1>
+      <h1>Sydney</h1>
     </div>
 
     <div class="modulo mapa">
       <h2 class="subtitulo">Mapa da cidade</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+      <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
     </div>
 
     <div class="modulo notaveis">
