--- a/frontEnd/CSS/aula09CidadeMundo/complemento.html
+++ b/frontEnd/CSS/aula09CidadeMundo/complemento.html
@@ -39,18 +39,27 @@
 
     <div class="modulo mapa">
       <h2 class="subtitulo">Mapa da cidade</h2>
-      <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+      <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424141.69789449556!2d150.93197474999997!3d-33.84824394999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20Nova%20Gales%20do%20Sul%2C%20Austr%C3%A1lia!5e0!3m2!1spt-BR!2sbr!4v1759276232230!5m2!1spt-BR!2sbr" width="350" height="200" style="border: 0;" allowfullscreen="" loading="lazy" referrerptableicy="no-referrer-when-downgrade"></iframe>"
     </div>
 
     <div class="modulo notaveis">
       <h2 class="subtitulo">
         Principais celebridades e notáveis da cidade
       </h2>
-      <ol>
-        <li><a href="https://pt.wikipedia.org/wiki/Hugh_Jackman">Hugh Jackman</a></li>
-        <li><a href="https://pt.wikipedia.org/wiki/Russell_Crowe">Russel Crowe</a></li>
-        <li><a href="https://pt.wikipedia.org/wiki/Chris_Hemsworth">Chris Hemsworth</a></li>
-      </ol>
+      <table class="celebridades">
+          <thead>
+            <tr>
+            <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Hugh_Jackman_by_Gage_Skidmore_3.jpg/500px-Hugh_Jackman_by_Gage_Skidmore_3.jpg" alt="Hugh Jackman" width="80" title="Hugh Jackman" loading="lazy"></th>
+            <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Russell_Crowe_%2833994020424%29.jpg/330px-Russell_Crowe_%2833994020424%29.jpg" alt="Russell Crowe" width="70" title="Russell Crowe" loading="lazy"></th>
+            <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Chris_Hemsworth_by_Gage_Skidmore_3.jpg/330px-Chris_Hemsworth_by_Gage_Skidmore_3.jpg" alt="Chris Hemsworth" width="70" title="Chris Hemsworth" loading="lazy"></th>
+            </thead>
+            </tr>
+            <tbody>
+            <td><a href="https://pt.wikipedia.org/wiki/Hugh_Jackman">Hugh Jackman</a></td>
+            <td><a href="https://pt.wikipedia.org/wiki/Russell_Crowe">Russel Crowe</a></td>
+            <td><a href="https://pt.wikipedia.org/wiki/Chris_Hemsworth">Chris Hemsworth</a></td>
+            </tbody>
+      </table>
     </div>
   </main>
 
