--- a/frontEnd/aula13Bootstrap/index.html
+++ b/frontEnd/aula13Bootstrap/index.html
@@ -76,7 +76,7 @@
       <h1>Meu primeiro site com Bootstrap</h1>
     </header>
     <main>
-      <div id="carouselExampleDark" class="carousel carousel-dark slide">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -100,31 +100,22 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="../CSS/aula09CidadeMundo/assets/img/australia/sydney.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img src="assets/img/marrocos.jpg" class="d-block w-100" alt="Marrocos" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+              <h5>Marrocos</h5>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="../CSS/aula09CidadeMundo/assets/img/italia/capri.jpg" class="d-block w-100" alt="..." />
+            <img src="assets/img/gruta.jpg" class="d-block w-100" alt="Gruta" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+              <h5>Gruta</h5>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../CSS/aula09CidadeMundo/assets/img/italia/veneza.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/egito.jpg" class="d-block w-100" alt="Egito" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+              <h5>Egito</h5>
             </div>
           </div>
         </div>
@@ -146,6 +137,52 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+      <div class="container p-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a short card.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
+      </div>
+      <div class="container">
+        <div class="d-grid gap-2 d-md-block">
+  <button class="btn btn-primary" type="button">Button</button>
+  <button class="btn btn-primary" type="button">Button</button>
+</div>
       </div>
     </main>
     <footer><p>&copy;AdriBalon2025</p></footer>
