--- a/frontEnd/DOM/aula12Dom/index.html
+++ b/frontEnd/DOM/aula12Dom/index.html
@@ -14,7 +14,7 @@
     <main id="principal">
       <div class="container">
         <div class="quadrado azul">
-          <h2>Azul</h2>
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ad adipisci debitis quibusdam nam similique doloribus enim modi quaerat voluptatibus, fugiat optio minus corporis in possimus. Vitae labore aliquam quibusdam.</h2>
         </div>
         <div id="estrutura" class="quadrado vermelho">
           <h2>Vermelho</h2>
