--- a/frontEnd/HTML/aula02HeadingsLinks/02-primeiraPag/sobreNos.html
+++ b/frontEnd/HTML/aula02HeadingsLinks/02-primeiraPag/sobreNos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sobre nós</h1>
-    <p>Adriana, tel 21-981229255, drizi.b.o@gmail.com</p>
+    <p>&copy; Adriana, tel 21-981229255, drizi.b.o@gmail.com</p>
     <a href="./index.html">Voltar</a>
 </body>
 </html>
