--- a/frontEnd/HTML/aula04Tabela/tabela.html
+++ b/frontEnd/HTML/aula04Tabela/tabela.html
@@ -8,18 +8,18 @@
 <body>
     <center>
         <table width="70%" border="5" style="background-color:rgb(17, 109, 126);">
-        <thead>
-            <tr>
+        <thead> <!-- cabeçalho da tabela -->
+            <tr> <!-- linha do cabeçalho -->
                 <th>Nome</th>
                 <th>Idade</th>
                 <th>Nacionalidade</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody> <!-- corpo da tabela -->
             <tr>
-                <td>Jose</td>
+                <td>Jose</td> <!-- celula da tabela -->
                 <td>75</td>
-                <td rowspan="4">Brasileiro</td>
+                <td rowspan="4">Brasileiro</td> <!-- mescla 4 linhas com a mesma informação -->
             </tr>
             <tr>
                 <td>Adriana</td>
