--- a/frontEnd/HTML/aula05Formularios/formulario.html
+++ b/frontEnd/HTML/aula05Formularios/formulario.html
@@ -62,6 +62,23 @@
             <option value="in">Inglaterra</option>
             <option value="fr">França</option>
             <option value="al">Alemanha</option>
+        <optgroup label="asia">
+            <option value="jp">Japão</option>
+            <option value="cn">China</option>
+            <option value="kr">Coreia do Sul</option>
+            <option value="in">Índia</option>
+            <option value="vn">Vietnã</option>
+            <option value="th">Tailândia</option>
+        <optgroup label="oceania">
+            <option value="au">Austrália</option>
+            <option value="nz">Nova Zelândia</option>
+        <optgroup label="africa">
+            <option value="eg">Egito</option>
+            <option value="ma">Marrocos</option>
+            <option value="ag">Argélia</option>
+            <option value="as">África do Sul</option>
+            <option value="an">Angola</option>
+            <option value="md">Madagascar</option>
         </optgroup>
         </select><br>
         
@@ -122,7 +139,7 @@
 
         <!-- Telefone -->
         <label for="tel">Telefone:</label>
-        <input type="cel" name="" id="tel" placeholder="Digite seu tel"><br>
+        <input type="cel" name="" id="tel" placeholder="Digite seu tel"><br> <!--placeholder é uma dica pro usuário-->
 
         <!-- Buscas -->
         <label for="pesquisa">Pesquisa:</label>
