--- a/frontEnd/DOM/aula12Dom/index.html
+++ b/frontEnd/DOM/aula12Dom/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS</title>
+    <title>DOM</title>
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header id="cabecalho">
-      <h1>CSS</h1>
+      <h1>DOM</h1>
     </header>
 
     <main id="principal">
